Fixed mobile bottome spacing issues

--- a/src/Pages/Desktop/AppStore/AppDetail/AppDetail.css
+++ b/src/Pages/Desktop/AppStore/AppDetail/AppDetail.css
@@ -102,7 +102,7 @@
         width: 80%;
         height: auto;
         margin-bottom: 2rem;
-        padding-bottom: 10rem;
+        padding-bottom: 20rem;
     }
 
     .appDetailAppIcon {
