--- a/src/Pages/Desktop/Browser/Websites/WebsiteConetent.css
+++ b/src/Pages/Desktop/Browser/Websites/WebsiteConetent.css
@@ -146,7 +146,7 @@
         width: 80%;
         margin-left: 0;
         margin-right: 0;
-        padding: 0 10% 5rem 10%;
+        padding: 0 10% 10rem 10%;
 
     }
 }
